# building-image-triplet-model

./: .flake8  .gitignore  DATAMODULE_REVIEW.md  DATASET_PROCESSOR_REVIEW.md  GEMINI.md  Makefile  NAMING_REVIEW_SUMMARY.md  README.md  config.example.yaml  config.yaml  environment.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
building_image_triplet_model/: datamodule.py  dataset_processor.py  model.py  preprocess_resume.py  test_basic.py  test_datamodule.py  test_preprocessing.py  test_triplet_dataset.py  test_utils.py  train.py  train_optuna.py  triplet_dataset.py  utils.py
building_image_triplet_model/preprocessing/: __init__.py  config.py  embeddings.py  hdf5_writer.py  image_validation.py  metadata.py  processor.py
docs/: gcp_preprocessing_plan.md  preprocessing_gcp.md
gcp/scripts/: download_archives.sh  extract_archives.sh  startup_preprocess.sh
slurm/: optuna.sh  preprocess.sh  preprocess_narval.sh  preprocess_nibi.sh  setup_narval_env.sh  test.sh  test_preprocess_nibi.sh
slurm/preprocessing/: preprocess_narval.sh  preprocess_nibi.sh
slurm/testing/: test_preprocess_nibi.sh
slurm/train/: train_nibi.sh
