[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "building_image_triplet_model"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Alex Olson" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.12"
dependencies = [
    "h5py~=3.12.0",
    "numpy~=2.2.2",
    "optuna~=4.1.0",
    "pillow~=11.1.0",
    "rich~=14.0.0",
    "scikit-learn~=1.5.2",
    "scipy~=1.15.1",
    "timm~=1.0.15",
    "torch~=2.6.0",
    "torchvision~=0.21.0",
    "tqdm~=4.67.1",
    "wandb~=0.19.6",
    "lightning~=2.5.0",
    "pyyaml~=6.0.1"
]

[project.optional-dependencies]
test = ["pytest~=7.4.0"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["building_image_triplet_model"]
force_sort_within_sections = true

[tool.uv]
dev-dependencies = [
    "black~=25.1.0",
    "isort~=6.0.1", 
    "flake8~=7.2.0",
    "pytest~=7.4.0"
]

